# Änderungen an der SQL-Datenbank bitte hier vermerken.
#
# BETA-Phase! Aktuell verwendete Datenbank-Versionen bitte in dieser Datei markieren!
#

# demo002.sql =====================================================================================

ALTER TABLE `core_settings` DROP `type`, DROP `label` ;

ALTER TABLE `core_settings` CHANGE `modul` `modul` VARCHAR( 20 ) CHARACTER SET utf8 COLLATE utf8_bin NULL ;

	DROP TABLE `core_config`;

ALTER TABLE `core_users` DROP `set_pageselected_settings` ;

ALTER TABLE `core_user_right` DROP FOREIGN KEY `core_user_right_ibfk_2` ;

DROP TABLE core_rights;

ALTER TABLE `core_settings` ADD FOREIGN KEY ( `user` ) REFERENCES `core_users` (`id`) ON DELETE RESTRICT ON UPDATE RESTRICT ;

ALTER TABLE core_user_right DROP INDEX `right`;

# core003.sql =====================================================================================

ALTER TABLE `core_users` ADD `active` BOOLEAN NOT NULL DEFAULT TRUE AFTER `id` ;

# DB:Fabian_CD -----------------------------------------------------------------
# DB:Fabian_HD -----------------------------------------------------------------