@@ -1,2 +1,0 @@
-
-# db_blanko.sql =====================================================================================
